--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Привет!</h1>
+    <h1>Учимся работать с Git</h1>
 </body>
 </html>
